@@ -323,6 +323,7 @@ extern "C" {
  *    "1"       - Mouse events will generate touch events
  *
  *  By default SDL will *not* generate touch events for mouse events
+ *  Except for Android, they are generated by default.
  */
 
 #define SDL_HINT_MOUSE_TOUCH_EVENTS    "SDL_MOUSE_TOUCH_EVENTS"
